route to SinglepageController

--- a/routing/routes/routes.yml
+++ b/routing/routes/routes.yml
@@ -3,6 +3,6 @@
 multiauthsinglepage-login:
   path: /login
   defaults: {
-    _controller: 'SimpleSAML\Module\multiauthsinglepage\Controller\Multiauthsinglepage::main'
+    _controller: 'SimpleSAML\Module\multiauthsinglepage\Controller\SinglepageController::main'
   }
   methods: [GET, POST]
