--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "php": ">=8.1",
         "simplesamlphp/composer-module-installer": "^1.3",
         "simplesamlphp/assert": "^1.1",
-        "simplesamlphp/simplesamlphp": "^2.2"
+        "simplesamlphp/simplesamlphp": "^2.2",
+        "simplesamlphp/simplesamlphp-module-ldap": "2.3.5"
     },
     "require-dev": {
         "simplesamlphp/simplesamlphp-test-framework": "^1.6"
